# Clover

./: .gitignore  CMakeLists.txt  Makefile  README
cmake/modules/: FindClang.cmake  FindGallium.cmake  FindLLVM.cmake
configs/: default  linux-dri  linux-dri-x86  linux-dri-x86-64
cpuwinsys/: cpuwinsys.c  cpuwinsys.h
examples/trivial/: CMakeLists.txt  Makefile  basic.c
include/OpenCL/: cl.h  cl_gl.h  cl_platform.h  opencl.h
src/: CMakeLists.txt  Makefile  api_command.c  api_context.c  api_device.c  api_device.cpp  api_kernel.cpp  api_platform.c  api_profiling.c  device.c  device.cpp  device.h  deviceinfo.h
src/api/: api_command.cpp  api_context.cpp  api_device.cpp  api_enqueue.cpp  api_event.cpp  api_flush.cpp  api_gl.cpp  api_kernel.cpp  api_memory.cpp  api_platform.cpp  api_profiling.cpp  api_program.cpp  api_sampler.cpp
src/builtins/: coal-internal.h.in
src/compiler/: compiler.cpp  compiler.h
src/core/: api_command.cpp  api_device.cpp  api_enqueue.cpp  api_event.cpp  api_program.cpp  commandqueue.cpp  commandqueue.h  config.h.cmake  context.cpp  context.h  cpudevice.cpp  cpudevice.h  device.cpp  device.h  deviceinfo.h  deviceinterface.h  event.cpp  event.h  kernel.cpp  kernel.h  mem.cpp  mem.h  memobject.cpp  memobject.h  platformid.cpp  platformid.h  program.cpp  program.h  propertylist.h  sampler.cpp  sampler.h
src/cpuwinsys/: .gitignore  cpuwinsys.c  cpuwinsys.h
src/tools/: CMakeLists.txt  clcompiler.cpp
tests/: CMakeLists.txt  test_commandqueue.cpp  test_commandqueue.h  test_context.cpp  test_context.h  test_device.cpp  test_device.h  test_mem.cpp  test_mem.h  test_platform.cpp  test_platform.h  tests.c
